fix issue with tooltip overlapping tag controls

--- a/src/components/tooltip/tooltip.scss
+++ b/src/components/tooltip/tooltip.scss
@@ -7,12 +7,12 @@
 
     .questionmark {
       color: #0000ff;
-      border-top: 0px;
-      border-left: 0px;
-      border-right: 0px;
-      border-bottom: 2px;
-      border-style: dotted;
-      border-color: #0000ff;
+      border-bottom: 2px dotted #0000ff;
+      cursor: help;
+
+      &:hover + .tooltiptext {
+          opacity: 1;
+      }
     }
 
     .tooltiptext {
@@ -53,9 +53,5 @@
             top: -5px;
             left: 150%;
         }
-    }
-
-    &:hover .tooltiptext {
-        opacity: 1;
     }
 }
